fix overflow bug

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -56,6 +56,7 @@ main {
 
 section {
   overflow: auto;
+  width: 100vw;
   height: calc(100vh - 104px);
 }
 
